# anirust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  app_state.rs  config.rs  main.rs  player.rs
src/api/: client.rs  graphql_queries.rs  mod.rs
src/api/models/: request_models.rs  response_models.rs
src/api/url_processor/: decrypt.rs  mod.rs
src/cli/: args.rs
src/cli/commands/: download.rs  search.rs
src/menu/: handlers.rs  mod.rs  options.rs
src/utils/: fzf.rs  mod.rs
